adding project type route
